tests/data-clumps/test-cases/parameter-parameter/simple/negative/typescript/test.config.ts
import type { ScenarioConfig } from '@/scenarioUtils';

const config = {
  name: 'TypeScript parameter-parameter without enough shared parameters',
  language: 'typescript',
  sourceDir: 'source',
  expectedReportFile: 'report-expected.json',
  detectorOptions: {},
  debug: false,
} satisfies ScenarioConfig;

export default config;
